--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>The Green Place</title>
+        <title>The Healthy Place</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -9,17 +9,17 @@
                     <img src="logo.png" class="logo">
                     <ul>
 
-                        <li><a href="map/index.html" target="_blank"">Wildfire Warning</a></li>
-                        <li><a href="stream/index.html" target="_blank"">Harsh Reality</a></li>
-                        <li><a href="photos/index.html" target="_blank">Photo Log</a></li>
-                        <li><a href="calculate/index.html" target="_blank">Emissions Tracker</a></li>
-                        <li><a href="library/index.html" target="_blank">Resources</a></li>
-                        <li> <a href="donate/index.html" target="_blank" >Donate</a></li>
+                        <li><a href="" target="_blank"">Mood Tracker</a></li>
+                        <li><a href="" target="_blank"">AI Therapy</a></li>
+                        <li><a href="" target="_blank">Women's Health</a></li>
+                        <li><a href="" target="_blank">Sleep Tracker</a></li>
+                        <li><a href="" target="_blank">Resources</a></li>
+                        <li> <a href="" target="_blank">Donate</a></li>
                     </ul>
                 </div>
                 <div class="content">
-                    <h1>Empowering Change, Sustaining Our World: Your Source for Environmental Insights!</h1>
-                    <p>Even in today's world, the environment is too often neglected; The Green Place aims to change that.<br>Inform yourself on new environmental news, wildfire prediction, participate in the community and make a real difference by tracking your emissions!</p>
+                    <h1>Elevate Your Wellbeing: Mind, Body, Soul!</h1>
+                    <p>Even in today's world, our personal health is too often neglected; The Healthy Place aims to change that.<br>Find mood and emotion patterns, receive mental health support from and AI therapist and more!<br>Be sure to check out our womens' health section.</p>
                 </div>
             </div>
     </body>
