--- a/chatbot.html
+++ b/chatbot.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    body {
+        font-size: 30px;
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #667db6;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+        color:yellow; /* Change text color to white */
+    }
+    textarea { 
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px; 
+    }
+    input { font-size: 30px; }
+    button{
+        color:white;
+        background-color: green;
+        font-size: 30px;
+        border-radius: 12px;
+        transition-duration: 0.4s;
+    }
+    button:hover {
+        background-color:white;
+        color: black;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chatroom</title>
 </head>
 <body>
-    
+    <br>
+    </br>
+    <div>
+        <div>
+            <center>
+                <textarea id="response" rows="19" cols="50" style="width: 80%;" placeholder = "Response" readonly></textarea>
+            </center>
+            
+        </div>
+        <center>
+        <br>
+        <br>
+        <form id="chat-form">
+            <label for="mytext"></label>
+            <input type="text" id="mytext" style="width: 75%;" placeholder = "Send a Message!" required>
+            <button type="submit">Enter</button>
+        </form>
+        </center>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
