--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                     <ul>
 
                         <li><a href="" target="_blank"">Mood Tracker</a></li>
-                        <li><a href="" target="_blank"">AI Therapy</a></li>
+                        <li><a href="chatbot.html" target="_blank"">AI Therapy</a></li>
                         <li><a href="" target="_blank">Women's Health</a></li>
                         <li><a href="" target="_blank">Sleep Tracker</a></li>
                         <li><a href="" target="_blank">Resources</a></li>
