--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
                     <img src="logo.png" class="logo">
                     <ul>
 
-                        <li><a href="" target="_blank"">Mood Tracker</a></li>
-                        <li><a href="chatbot.html" target="_blank"">AI Therapy</a></li>
-                        <li><a href="" target="_blank">Women's Health</a></li>
+                        <li><a href="mood/index.html" target="_blank"">Mood Tracker</a></li>
+                        <li><a href="chatbot/index.html" target="_blank"">AI Therapy</a></li>
+                        <li><a href="calendar/index.html" target="_blank">Ovulation Calendar</a></li>
                         <li><a href="" target="_blank">Sleep Tracker</a></li>
                         <li><a href="" target="_blank">Resources</a></li>
                         <li> <a href="" target="_blank">Donate</a></li>
