--- a/mood/index.html
+++ b/mood/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discussion Forum with Emotion Selection</title>
+    <title>Discussion Forum with Emoji Distribution</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to the Discussion Forum</h1>
+    <h1>Welcome to Mood Tracker</h1>
 
     <!-- Forum Section -->
     <section id="forum">
@@ -17,7 +17,7 @@
         </ul>
 
         <!-- Post Form -->
-        <h3>Add a New Post</h3>
+        <h3>Upload your feelings from today!</h3>
         <form id="post-form">
             <label for="post-emotion">Select an Emotion:</label>
             <select id="post-emotion" required>
@@ -33,14 +33,6 @@
             <input type="file" accept="image/*" id="post-image">
             <button type="submit">Submit</button>
         </form>
-    </section>
-
-    <!-- Bar Graph Section -->
-    <section id="bar-graph">
-        <h2>Emoji Frequency Bar Graph</h2>
-        <div id="emoji-graph">
-            <!-- Emoji frequency bars will be added here dynamically -->
-        </div>
     </section>
 
     <div class="modal"></div>
