--- a/mood/index.html
+++ b/mood/index.html
@@ -25,6 +25,15 @@
                 <option value="😢">😢 Sad</option>
                 <option value="😡">😡 Angry</option>
                 <option value="😄">😄 Excited</option>
+                <option value="🤬">🤬 Frustrated</option>
+                <option value="😔">😔 Disappointed</option>
+                <option value="😬">😬 Stressed</option>
+                <option value="🥱">🥱 Bored</option>
+                <option value="😤">😤 Proud</option>
+                <option value="😴">😴 Lazy</option>
+                <option value="😵">😵 Confused</option>
+                <option value="😞">😞 Lonely</option>
+                <option value="😒">😒 Jealous</option>
                 <!-- Add more emotion options as needed -->
             </select><br>
             <label for="post-content">Content:</label>
