--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h1> Sign up </h1>
-        <form class = "signup" onsubmit = "myfunc(event)">
+        <form class = "signup" action = "index.html" onsubmit = "myfunc(event)">
 
             <label>First Name</label>
             <input type = "text" id = "first_name" placeholder = "">
@@ -21,12 +21,22 @@
             <input type = "password" id = "password" placeholder = "">
             <label>Confirm Password</label>
             <input type = "password" id = "password1" placeholder = "">
-            <input type = "button" value  = "Submit">
+            <input type = "submit" value  = "Submit">
 
         </form>
     <script type = "text/javascript">
         function myfunc(event){
             event.preventDefault();
+            var first_name = document.getElementById("first_name").value;
+            var last_name = document.getElementById("last_name").value;
+            var email = document.getElementById("email").value;
+            var password = document.getElementById("password").value;
+            var password1 = document.getElementById("password1").value;
+            localStorage.setItem("Is_first_name", first_name)
+            localStorage.setItem("Is_last_name", last_name)
+            localStorage.setItem("Is_email", email)
+            localStorage.setItem("Is_password", password)
+            location.href = "profile.html";
         }
     </script>
     </div>
