--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                         <li><a href="calendar/index.html" target="_blank">Ovulation Calendar</a></li>
                         <li><a href="menstrual/index.html" target="_blank">Cycle Tracker</a></li>
                         <li><a href="Music/index.html" target="_blank">Music Player</a></li>
-                        <li> <a href="" target="_blank">Profile</a></li>
+                        <li> <a href="profile.html" target="_blank">Profile</a></li>
                     </ul>
                 </div>
                 <div class="content">
