--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
             localStorage.setItem("Is_last_name", last_name)
             localStorage.setItem("Is_email", email)
             localStorage.setItem("Is_password", password)
-            location.href = "profile.html";
+            location.href = "index.html";
         }
     </script>
     </div>
